--- a/server/templates/bases/base.html
+++ b/server/templates/bases/base.html
@@ -4,9 +4,11 @@
     <head>
         <script type="text/javascript" src="/static/requirejs/require.js"></script>
         <script type="text/javascript" src="/static/main.js"></script>
-        <link rel="stylesheet" type="text/css" href="/static/bootstrap/css/bootstrap.min.css">
     </head>
     <body>
         {% block body %} {% endblock %}
+        <link rel="stylesheet" type="text/css" href="/static/bootstrap/css/bootstrap.min.css">
+        <link rel="stylesheet" href="/static/font-awesome/css/font-awesome.min.css">
+        <link rel="stylesheet" href="/static/css/common.css">
     </body>
 </html>
