--- a/server/templates/bases/base-with-header.html
+++ b/server/templates/bases/base-with-header.html
@@ -4,3 +4,7 @@
     {% include "components/header.html" %}
     {% block content %} {% endblock %}
 {% endblock %}
+
+{% block after_scripts %}
+{% block scripts %} {% endblock %}
+{% endblock %}
