--- a/server/templates/bases/base.html
+++ b/server/templates/bases/base.html
@@ -4,6 +4,7 @@
     <head>
         <script type="text/javascript" src="/static/requirejs/require.js"></script>
         <script type="text/javascript" src="/static/main.js"></script>
+        {% block after_scripts %} {% endblock %}
     </head>
     <body>
         {% block body %} {% endblock %}
