--- a/server/articles/templates/articles/list.html
+++ b/server/articles/templates/articles/list.html
@@ -5,60 +5,81 @@
 {% verbatim %}
 <template id="tmpl-article-top-nav-single">
     <li class="nav-item">
-        <a href="#{{id}}" data-toggle="tab" class="nav-link" data-name="{{data.1}}">
-            {{data.0}}
+        <a href="#{{id}}" data-toggle="tab" class="nav-link" data-name="{{name}}">
+            {{title}}
         </a>
     </li>
 </template>
 
 <template id="tmpl-article-top-nav-stacked">
     <li class="nav-item dropdown">
-        <a href="#" data-toggle="dropdown" class="nav-link dropdown-toggle">{{data.0}}</a>
+        <a href="#" data-toggle="dropdown" class="nav-link dropdown-toggle">{{title}}</a>
         <div class="dropdown-menu">
-            {{#data.1}}
-            <a href="#{{id}}" class="dropdown-item" data-name="{{1}}" data-toggle="tab">{{0}}</a>
-            {{/data.1}}
+            {{#items}}
+            <a href="#{{id}}" class="dropdown-item" data-name="{{name}}" data-toggle="tab">{{title}}</a>
+            {{/items}}
         </div>
     </li>
 </template>
 
 <template id="tmpl-article-side-nav-single">
     <li class="nav-item">
-        <a href="#{{id}}" data-toggle="tab" class="nav-link" data-name="{{data.1}}">{{data.0}}</a>
+        <a href="#{{id}}" class="nav-link" data-name="{{name}}">{{title}}</a>
     </li>
 </template>
 
 <template id="tmpl-article-side-nav-stacked">
     <li class="nav-item">
-        <a href="#" data-toggle="tab" class="nav-link">{{data.0}}</a>
-        {{#data.1}}
-        <a href="#{{id}}" class="nav-link" data-name="{{1}}">=> {{0}}</a>
-        {{/data.1}}
+        <a href="#" data-toggle="tab" class="nav-link disabled">{{title}}</a>
     </li>
+    {{#items}}
+    <li class="nav-item">
+        <a href="#{{id}}" class="nav-link" data-name="{{name}}">=> {{title}}</a>
+    </li>
+    {{/items}}
 </template>
 
 <template id="tmpl-tab-pane">
-    <div class="tab-pane" id="{{id}}"></div>
+    <div class="tab-pane" id="{{id}}" data-name="{{name}}"></div>
 </template>
 
 <template id="tmpl-article">
-    {{title}}
-    + {{content}}
-    + {{id}}
+    <li class="media my-4">
+        <img class="d-flex mr-3" src="https://gold.xitu.io/images/welcome/entry-default-img@2x.png" alt="Generic placeholder image" style="width: 64px; height: 64px;">
+        <div class="media-body">
+            <h5 class="mt-0">{{title}}</h5>
+            <time class="timeago" datetime="{{published}}"></time>
+        </div>
+    </li>
 </template>
 
 <template id="tmpl-article-list-view">
-fuck
+    <ul class="list-unstyled">
     {{#results}}
         {{>article}}
     {{/results}}
+    </ul>
+    <nav>
+        <ul class="pagination">
+            {{#previous}}
+            <li class="page-item">
+                <a href="#" class="page-link" data-api="{{previous}}">Previous</a>
+            </li>
+            {{/previous}}
+            {{#next}}
+            <li class="page-item">
+                <a href="#" class="page-link" data-api="{{next}}">Next</a>
+            </li>
+            {{/next}}
+        </ul>
+    </nav>
 </template>
 {% endverbatim %}
 
 <div class="container">
     <ul class="nav nav-tabs hidden-md-up" id="article-top-nav"></ul>
     <div class="row">
-        <ul class="nav nav-tabs flex-column hidden-sm-down col-md-4" id="article-side-nav"></ul>
+        <ul class="nav nav-pills flex-column hidden-sm-down col-md-4" id="article-side-nav"></ul>
         <div class="tab-content col-md-8"></div>
     </div>
 </div>
