--- a/server/articles/templates/articles/list.html
+++ b/server/articles/templates/articles/list.html
@@ -96,7 +96,7 @@
                 ['down1', 'name2']
             ]]
         ], {
-            name: '/articles/api/articles/',
+            name: '/api/articles/',
             name2: null
         }, 'name2')
     })
