--- a/server/articles/templates/articles/list.html
+++ b/server/articles/templates/articles/list.html
@@ -97,7 +97,7 @@
             ]]
         ], {
             name: '/api/articles/',
-            name2: null
+            name2: '/api/articles/'
         }, 'name2')
     })
 </script>
