--- a/server/articles/templates/articles/edit.html
+++ b/server/articles/templates/articles/edit.html
@@ -10,8 +10,14 @@
         </div>
         <div class="form-group">
             <label for="tags" class="form-control-label">Tags</label>
-            <input type="text" name="tags" id="tags" class="form-control" value="{{article.tags.all|join:' '}}">
+            <input type="text" name="tags" id="tags" class="form-control" value="{{article.tags.all|join:','}}">
         </div>
+        {% if not article %}
+        <div class="form-group">
+            <label for="mentions" class="form-control-label">Metions</label>
+            <input type="text" name="mentions" id="mentions" class="form-control">
+        </div>
+        {% endif %}
         <div class="form-group">
             <textarea name="content" id="content" cols="30" rows="10">{{article.content}}</textarea>
         </div>
@@ -50,6 +56,7 @@
 {% block scripts %}
 <link rel="stylesheet" href="/static/trumbowyg/ui/trumbowyg.min.css">
 <link rel="stylesheet" href="/static/file-upload/css/jquery.fileupload.css">
+<link rel="stylesheet" href="/static/tagator/fm.tagator.jquery.min.css">
 <script>
     define('page-config', {
         articleId: "{{article.id}}"
