--- a/server/articles/templates/articles/detail.html
+++ b/server/articles/templates/articles/detail.html
@@ -6,11 +6,17 @@
 <template id="tmpl-comment-item">
     <li class="media my-4">
         <div class="media-body">
+            {{#reply_to}}
+            @{{reply_to.nickname}}
+            {{/reply_to}}
             {{content}}
             <p>
                 <small class="mt-1 mb-0">
-                    {{author}}&middot;
+                    {{author.nickname}}&middot;
                     <time class="timeago" datetime="{{posted}}"></time>
+                    {{#can_reply}}
+                    <button class="btn btn-link btn-sm btn-reply" data-id="{{author.id}}" data-nickname="{{author.nickname}}">Reply</button>
+                    {{/can_reply}}
                 </small>
             </p>
         </div>
@@ -51,16 +57,17 @@
             {% endfor %}
         </section>
         <section class="my-5">
-            <h6>Comment</h6>
+            <h6 id='comment-title'>Comment</h6>
             <form class="clearfix" id="comment-form">
                 <input type="hidden" name="author" value="{{user.id}}">
                 <input type="hidden" name="article" value="{{article.id}}">
                 <div class="form-group">
-                    <textarea name="content" class="form-control" placeholder="Comment"></textarea>
+                    <textarea name="content" class="form-control"></textarea>
                 </div>
                 <div class="form-group clearfix">
                     <button type="submit" class="btn btn-primary float-right">Submit</button>
-                    <small class="text-muted float-right align-middle">Ctrl + Enter</small>
+                    <button type="button" class="btn btn-secondary mx-2 float-right hidden-xs-up" id="cancel-reply">Cancel Reply</button>
+                    <small class="text-muted float-right hidden-sm-down my-2">Ctrl + Enter</small>
                 </div>
             </form>
         </section>
