--- a/server/articles/templates/articles/detail.html
+++ b/server/articles/templates/articles/detail.html
@@ -32,18 +32,18 @@
         <section class="my-3">
             <span class="text-muted">
                 {{article.author.nickname}} &middot;
-                Publish at <time class="timeago" datetime="{{article.published|date:'c'}}"></time> &middot;
-                Edit at <time class="timeago" datetime="{{article.published|date:'c'}}"></time>
+                {% trans 'Publish at' %} <time class="timeago" datetime="{{article.published|date:'c'}}"></time> &middot;
+                {% trans 'Edit at' %} <time class="timeago" datetime="{{article.published|date:'c'}}"></time>
             </span>
         </section>
         <section class="my-3">
-            {% if perms.articles.can_verify %}
+            {% if perms.articles.can_verify  and article.author.id != user.id %}
             <div class="btn-group btn-group-sm">
                 {% if article.status != 'rejected' %}
-                <button class="btn btn-secondary btn-danger" id="reject">Reject</button>
+                <button class="btn btn-secondary btn-danger" id="reject">{% trans 'Reject' %}</button>
                 {% endif %}
                 {% if article.status != 'verified' %}
-                <button class="btn btn-secondary btn-success" id="accept">Accept</button>
+                <button class="btn btn-secondary btn-success" id="accept">{% trans 'Accept' %}</button>
                 {% endif %}
             </div>
             {% endif %}
@@ -57,7 +57,7 @@
             {% endfor %}
         </section>
         <section class="my-5">
-            <h6 id='comment-title'>Comment</h6>
+            <h6 id='comment-title'>{% trans 'Comment' %}</h6>
             <form class="clearfix" id="comment-form">
                 <input type="hidden" name="author" value="{{user.id}}">
                 <input type="hidden" name="article" value="{{article.id}}">
@@ -65,15 +65,15 @@
                     <textarea name="content" class="form-control"></textarea>
                 </div>
                 <div class="form-group clearfix">
-                    <button type="submit" class="btn btn-primary float-right">Submit</button>
-                    <button type="button" class="btn btn-secondary mx-2 float-right hidden-xs-up" id="cancel-reply">Cancel Reply</button>
+                    <button type="submit" class="btn btn-primary float-right ml-2">{% trans 'Submit' %}</button>
+                    <button type="button" class="btn btn-secondary ml-2 float-right hidden-xs-up" id="cancel-reply">{% trans 'Cancel Reply' %}</button>
                     <small class="text-muted float-right hidden-sm-down my-2">Ctrl + Enter</small>
                 </div>
             </form>
         </section>
         <section>
             <ul class="list-unstyled" id="comment-box"></ul>
-            <p id="load-more-comments">Load more</p>
+            <p id="load-more-comments">{% trans 'Load More' %}</p>
         </section>
     </article>
 </div>
