--- a/server/articles/templates/articles/edit.html
+++ b/server/articles/templates/articles/edit.html
@@ -5,26 +5,26 @@
     <form id="edit-form">
         <input type="hidden" name="author" value="{{user.id}}">
         <div class="form-group">
-            <label for="title" class="form-control-label">Title</label>
+            <label for="title" class="form-control-label">{% trans 'Title' %}</label>
             <input type="text" class="form-control" id="title" name="title" value="{{article.title}}">
         </div>
         <div class="form-group">
-            <label for="tags" class="form-control-label">Tags</label>
+            <label for="tags" class="form-control-label">{% trans 'Tags' %}</label>
             <input type="text" name="tags" id="tags" class="form-control" value="{{article.tags.all|join:','}}">
         </div>
         {% if not article %}
         <div class="form-group">
-            <label for="mentions" class="form-control-label">Metions</label>
+            <label for="mentions" class="form-control-label">{% trans 'Mentions' %}</label>
             <input type="text" name="mentions" id="mentions" class="form-control">
         </div>
         {% endif %}
         <div class="form-group">
             <textarea name="content" id="content" cols="30" rows="10">{{article.content}}</textarea>
         </div>
-        <button type="submit" class="float-right btn btn-primary">Submit</button>
+        <button type="submit" class="float-right btn btn-primary">{% trans 'Submit' %}</button>
     </form>
     <span class="btn btn-success fileinput-button" id="attachments">
-        <span>Attachments</span>
+        <span>{% trans 'Attachments' %}</span>
         <input type="file" name="file">
     </span>
     <div class="bg-faded">
@@ -32,7 +32,7 @@
           <div class="progress-bar" role="progressbar" style="width: 0; height: 2px;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
         </div>
         <div id="file-box" class="row mx-0"></div>
-        <h5 class="text-center py-5 no-files">No Files.</h5>
+        <h5 class="text-center py-5 no-files">{% trans 'No Files' %}</h5>
     </div>
 </div>
 
