--- a/front-end/scss/chat.scss
+++ b/front-end/scss/chat.scss
@@ -1,3 +1,5 @@
+$sidebar-bg: #2e3238;
+
 body, html, .full-height {
     height: 100%;
     max-height: 100%;
@@ -12,7 +14,7 @@ body, html, .full-height {
 }
 
 #sidebar {
-    background-color: #2e3238;
+    background-color: $sidebar-bg;
     color: white;
 
     ul.top-nav {
@@ -49,6 +51,17 @@ body, html, .full-height {
     }
 }
 
-#user-contacts-pane ul img {
-    width: 36px;
+div.contact-pane {
+     ul {
+        li {
+            img {
+                    width: 36px;
+                }
+
+            &:hover {
+                background-color: lighten($sidebar-bg, 5%);
+                cursor: pointer;
+            }
+        }
+     }
 }
