--- a/front-end/scss/chat.scss
+++ b/front-end/scss/chat.scss
@@ -1,4 +1,36 @@
 $sidebar-bg: #2e3238;
+$chatview-bg: #eee;
+
+// Scrollbars
+
+::-webkit-scrollbar {
+    width: 6px;
+    height: 6px;
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: 3px;
+    -webkit-border-radius: 3px;
+    background-color: #c3c3c3;
+}
+
+::-webkit-scrollbar-track {
+    background-color: transparent;
+}
+
+// Util Mixins
+
+@mixin hover-effects ($bg-color) {
+
+    &:hover, &:focus {
+        background-color: lighten($bg-color, 5%);
+    }
+}
+
+@mixin border-color ($bg-color) {
+    border-color: darken($bg-color, 10%);
+    border-style: solid;
+}
 
 body, html, .full-height {
     height: 100%;
@@ -43,25 +75,250 @@ body, html, .full-height {
 
         max-height: 100%;
         overflow-y: auto;
-
-        &::-webkit-scrollbar {
-            background-color: transparent;
-            width: 0;
-        }
+        background: inherit;
     }
 }
 
-div.contact-pane {
+.tab-content div.tab-pane {
      ul {
         li {
             img {
                     width: 36px;
                 }
 
-            &:hover {
-                background-color: lighten($sidebar-bg, 5%);
-                cursor: pointer;
-            }
+            @include hover-effects($sidebar-bg);
         }
      }
+}
+
+#chat-view {
+    background-color: $chatview-bg;
+
+    div.top-bar {
+        border-width: 0;
+        border-bottom-width: 1px;
+        background-color: $sidebar-bg;
+        color: invert($sidebar-bg);
+
+        .toggle-view {
+            border-width: 0;
+            background-color: transparent;
+            padding: 1em;
+            line-height: 1;
+            color: inherit;
+
+            @include hover-effects($sidebar-bg);
+        }
+
+        .title {
+            display: block;
+            padding: 1em;
+            text-align: center;
+            line-height: 1;
+        }
+    }
+
+    div.cover {
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        z-index: 100;
+        background-color: inherit;
+    }
+}
+
+#input-bar {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    max-width: 100%;
+    border-width: 0;
+    border-top-width: 1px;
+    background-color: inherit;
+    @include border-color($chatview-bg);
+
+    div.progress {
+        position: absolute;
+        left: 0;
+        right: 0;
+        top: 0;
+        height: 1px;
+    }
+
+    textarea {
+        height: 100%;
+        width: 100%;
+        background-color: transparent;
+        border-radius: 0;
+        border-width: 0;
+        border-bottom-width: 1px;
+    }
+
+    .control-button {
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        padding: 1em;
+        background-color: $chatview-bg;
+        line-height: 1;
+        display: none;
+
+        @include hover-effects ($chatview-bg);
+    }
+}
+
+.btn-circle {
+    border-width: 1px!important;
+    @include border-color($chatview-bg);
+    padding: 1em!important;
+    background: transparent;
+    border-radius: 50%;
+    height: 50px;
+    width: 50px;
+    color: inherit;
+
+    @include hover-effects($chatview-bg);
+}
+
+#message-pane {
+    position: absolute;
+    top: 49px;
+    bottom: 62px;
+    left: 0;
+    right: 0;
+    overflow-x: auto;
+}
+
+#chat-pane {
+    img {
+        width: 40px;
+        height: 40px;
+    }
+
+    .media-body {
+        * {
+            text-overflow: ellipsis;
+            line-height: 1;
+            display: block;
+            max-height: 1em;
+            height: 1em;
+            overflow: hidden;
+            word-break: break-all;
+        }
+    }
+}
+
+#search-pane {
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    background: inherit;
+}
+
+#message-box {
+    max-width: 100%;
+    padding: 1em;
+}
+
+
+// Message Item
+
+.message-item {
+
+    img.avatar {
+        width: 40px;
+    }
+
+    .message-body {
+        margin: 0;
+        min-height: 1em;
+        word-wrap: break-word;
+        max-width: 100%;
+
+        .message-content {
+            margin: 0;
+            padding: 8px 12px;
+            display: inline-block;
+            word-wrap: break-word;
+            word-break: break-all;
+        }
+    }
+
+    &.left {
+        //margin-right: 2.5em;
+
+        img.avatar-right {
+            display: none!important;
+        }
+
+        .message-content {
+            margin-left: .5em;
+            background: white;
+        }
+    }
+
+    &.right {
+        img.avatar-left {
+            display: none!important;
+        }
+
+        .message-content {
+            margin-right: .5em;
+            background: #b2e281;
+            float: right;
+        }
+    }
+}
+
+.red-point {
+    position: relative;
+
+    @mixin make-dot ($size) {
+        position: absolute;
+        background-color: red;
+        right: - $size * 0.4;
+        top: - $size * 0.25;
+        width: $size;
+        height: $size;
+        border-radius: 50%;
+        display: none;
+    }
+
+    .dot {
+        @include make-dot(5px);
+    }
+
+    .dot.dot-2x {
+        @include make-dot(10px);
+    }
+}
+
+@import "node_modules/bootstrap/scss/variables";
+@import "node_modules/bootstrap/scss/mixins/_breakpoints";
+
+@include media-breakpoint-up(md) {
+    #input-bar textarea {
+        height: 6em;
+    }
+
+    #message-pane {
+        bottom: 101px;
+    }
+
+    div.top-bar {
+        @include border-color($chatview-bg);
+        background-color: $chatview-bg!important;
+        color: invert($chatview-bg)!important;
+
+        .toggle-view {
+            @include hover-effects($chatview-bg);
+        }
+    }
 }
