--- a/front-end/scss/_override.scss
+++ b/front-end/scss/_override.scss
@@ -3,6 +3,10 @@ html, body {
     overflow-x: hidden;
 }
 
+.media-body {
+    word-break: break-all;
+}
+
 button {
     &:focus, &:active {
         outline: none;
