--- a/server/chat/templates/chat/index.html
+++ b/server/chat/templates/chat/index.html
@@ -119,7 +119,7 @@
 <link rel="stylesheet" href="/static/file-upload/css/jquery.fileupload.css">
 <link rel="stylesheet" href="{% static 'css/chat.css' %}">
 <script>
-    define('ws-config', '/chat/')
+    define('ws-config', '/ws/chat/')
     require(['chat/index'])
 </script>
 {% endblock %}
