--- a/server/templates/bases/base.html
+++ b/server/templates/bases/base.html
@@ -20,7 +20,7 @@
     </head>
     <body>
         <div class="timeline alert alert-info">
-            <i class="fa fa-angle-left" data-icons="angle-left clock-o"></i>
+            <i class="fa fa-clock-o" data-icons="angle-left clock-o"></i>
             <span></span>
         </div>
         {% block body %} {% endblock %}
