--- a/front-end/scss/_override.scss
+++ b/front-end/scss/_override.scss
@@ -1,5 +1,7 @@
 html, body {
     max-width: 100%;
+    min-height: 100%;
+    height: 100%;
     overflow-x: hidden;
 }
 
@@ -19,7 +21,8 @@ button {
 
 .h-scroll {
     overflow-x: auto;
-    overflow-y: hidden;
+    // TODO
+    white-space: nowrap;
 
     &::-webkit-scrollbar {
         display: none;
