--- a/server/templates/components/header.html
+++ b/server/templates/components/header.html
@@ -1,6 +1,6 @@
 {% get_available_languages as LANGUAGES %}
 
-<nav class="navbar navbar-toggleable-md bg-primary navbar-inverse">
+<nav class="navbar navbar-toggleable-md navbar-inverse bg-inverse sticky" data-s-top="0" data-s-z-index="10000" data-s-auto-height="false">
     <button class="navbar-toggler navbar-toggler-right" data-toggle="collapse" data-target="#top-nav-bar">
         <span class="navbar-toggler-icon"></span>
     </button>
