--- a/server/users/templates/users/profile.html
+++ b/server/users/templates/users/profile.html
@@ -1,7 +1,7 @@
 {% extends "bases/base-with-header.html" %}
 
 {% block content %}
-<div class="jumbotron bg-warning">
+<div class="jumbotron bg-inverse text-white">
     <div class="row">
         <div class="col-md-3 text-center">
             <img src="{{user.avatar_url}}" class="rounded-circle avatar">
