--- a/server/templates/bases/base.html
+++ b/server/templates/bases/base.html
@@ -25,8 +25,7 @@
         </div>
         {% block body %} {% endblock %}
         <script>require(['timeline'])</script>
-        <link rel="stylesheet" type="text/css" href="/static/bootstrap/css/bootstrap.min.css">
+        <link rel="stylesheet" type="text/css" href="/static/css/bootstrap.css">
         <link rel="stylesheet" href="/static/font-awesome/css/font-awesome.min.css">
-        <link rel="stylesheet" href="/static/css/common.css">
     </body>
 </html>
